--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "moviebuddy",
+  "name": "Moviebuddy",
   "version": "0.0.1",
   "dependencies": {
+    "body-parser": "^1.12.0",
     "express": "^4.12.2",
     "mongoose": "^3.8.24"
   }
