--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "body-parser": "^1.12.0",
     "express": "^4.12.2",
-    "mongoose": "^3.8.24"
+    "lodash": "^3.5.0",
+    "mongoose": "^3.8.24",
+    "ws": "^0.7.1"
   }
 }
