--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "body-parser": "^1.12.0",
     "express": "^4.12.2",
+    "jwt-simple": "^0.2.0",
     "lodash": "^3.5.0",
     "mongoose": "^3.8.24",
     "ws": "^0.7.1"
