--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "body-parser": "^1.12.0",
     "express": "^4.12.2",
+    "express-jwt": "^2.0.1",
+    "jsonwebtoken": "^4.1.0",
     "jwt-simple": "^0.2.0",
     "lodash": "^3.5.0",
     "mongoose": "^3.8.24",
